# awsgpu

./: .gitignore  AI.txt  Makefile  PREPROCESSING.txt  RAG_llamaindex_1.ipynb  README.md  TDL.txt  admin.sh  chat-af1  package-lock.json  package.json  pyproject.toml  question-3Q4yfwJJrs.req  question-3Q4yfwJJrs.req.sh  rag.sh  tst.sh
MCP/: MCP.txt  mcp-config.json  nginx.conf
docker/: Dockerfile  Makefile  tst.cgi  ws.cgi
docker/files/: TDL.txt  package-lock.json  package.json  pyproject.toml
docker/files/scripts/: aws_vm_config.env  create-aws-vm.zsh  launch-pipeline-advanced-add-file.sh  launch-pipeline-tst.sh  list-instances.zsh  stop.zsh  tst.zsh
docker/files/src/pipeline-advanced/: convert_to_markdown.ts  convert_to_markdown.ts.AI  count_tokens.py  count_tokens.py.AI  create_chunks.py.AI  create_embeddings.py  describe_images.py  merge_chunks.sh  rerank.py  rerank.py.AI  search_chunks.py  search_chunks.py.AI  tst.py  update_weaviate.py.AI
notebooks/: RAG_llamaindex_1.ipynb
scripts/: add-file.sh  aws_vm_config.env  create-aws-vm.zsh  get-ip.zsh  getip.zsh  init-aws-vm.sh  launch-pipeline-advanced-add-file.sh  launch-pipeline-advanced.sh  new_script.zsh  oquery-long.sh  oquery.sh  request.sh  request_emb_from_openai.sh  ssh-root.sh  start-weaviate.sh  start.zsh  stop-weaviate.sh  stop.zsh  tst.zsh  tunnel-stable-diffusion.sh  visualize.sh
src/awsgpu/: convert_to_markdown.py  parse_to_markdown_aider.py  parse_word.py  parse_word.py.AI
src/batches/: describe_images.py
src/front/: .gitignore  accessdenied.txt  chat.css  chat.html  chat.js  chat.ts  front.html.AI  help.txt  rag.sh  server.py  server2.py  setvar.txt  system.txt  tst.txt
(+54 files in other folders)
